--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
         "freertos.h": "c",
         "unity.h": "c",
         "esp_tls.h": "c",
-        "http_client.h": "c"
+        "http_client.h": "c",
+        "esp_http_client.h": "c",
+        "esp_crt_bundle.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "cmake.configureOnOpen": true
