--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,13 @@
         "freertos.h": "c",
         "unity.h": "c",
         "esp_tls.h": "c",
-        "http_client.h": "c"
+        "http_client.h": "c",
+        "algorithm": "c",
+        "*.tcc": "c",
+        "memory": "c",
+        "new": "c",
+        "numeric": "c",
+        "system_error": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "cmake.configureOnOpen": true
